--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b3acfe">  <td>20/06/23 19:32:30</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.getTOken()[pri:0, instance:API_Automation.Rest_Assured.GetUSers_Test@2df3b89c]">&gt;&gt;getTOken</td> 
+<tr bgcolor="e2cbe0">  <td>20/06/24 18:48:47</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.getTOken()[pri:0, instance:API_Automation.Rest_Assured.AppTest@2df3b89c]">&gt;&gt;getTOken</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1977310713</td>   <td></td> </tr>
-<tr bgcolor="6ab1ab">  <td>20/06/23 19:32:33</td>   <td>3701</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="GetUSers_Test.validateGetUser()[pri:0, instance:API_Automation.Rest_Assured.GetUSers_Test@2df3b89c]">validateGetUser</td> 
+<tr bgcolor="ee68d8">  <td>20/06/24 18:48:50</td>   <td>3051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test()[pri:0, instance:API_Automation.Rest_Assured.AppTest@2df3b89c]">test</td> 
   <td>main@1977310713</td>   <td></td> </tr>
 </table>
