Externalized variables/data

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\costrategix\AppData\Local\Temp\testng-eclipse--1262607437\testng-customsuite.xml</span>
+                    <span>C:\Users\costrategix\AppData\Local\Temp\testng-eclipse-298739042\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -59,7 +59,7 @@
                 </li>
                 <li>
                   <a href="#" class="navigator-link " panel-name="group-Default_suite">
-                    <span>0 groups</span>
+                    <span>1 group</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,7 +91,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -102,7 +102,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="API_Automation.Rest_Assured.AppTest" hash-for-method="test">test</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="API_Automation.Rest_Assured.StatusChange_Test" hash-for-method="validateChangeStatus">validateChangeStatus</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="API_Automation.Rest_Assured.StatusChange_Test" hash-for-method="validateStatusResponseTime">validateStatusResponseTime</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="API_Automation.Rest_Assured.StatusChange_Test" hash-for-method="validateVarianceId">validateVarianceId</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -120,14 +130,34 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">API_Automation.Rest_Assured.AppTest</span>
+              <span class="class-name">API_Automation.Rest_Assured.StatusChange_Test</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="test">
-                  </a> <!-- test -->
-                  <span class="method-name">test</span>
+                  <a name="validateChangeStatus">
+                  </a> <!-- validateChangeStatus -->
+                  <span class="method-name">validateChangeStatus</span>
+                  <em>
+(validating status change API status code and status)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateStatusResponseTime">
+                  </a> <!-- validateStatusResponseTime -->
+                  <span class="method-name">validateStatusResponseTime</span>
+                  <em>
+(Validate status API response time)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="validateVarianceId">
+                  </a> <!-- validateVarianceId -->
+                  <span class="method-name">validateVarianceId</span>
+                  <em>
+(Validate status change in DB)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -135,7 +165,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\costrategix\AppData\Local\Temp\testng-eclipse--1262607437\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\costrategix\AppData\Local\Temp\testng-eclipse-298739042\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -144,7 +174,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;API_Automation.Rest_Assured.AppTest&quot;/&gt;
+      &lt;class name=&quot;API_Automation.Rest_Assured.StatusChange_Test&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -168,6 +198,22 @@
             <span class="header-content">Groups for Default suite</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="test-group">
+              <span class="test-group-name">Change Status</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">validateChangeStatus</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">validateStatusResponseTime</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">validateVarianceId</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="times-Default_suite" class="panel">
@@ -184,16 +230,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'test')
-data.setCell(0, 2, 'API_Automation.Rest_Assured.AppTest')
-data.setCell(0, 3, 5);
+data.setCell(0, 1, 'validateChangeStatus')
+data.setCell(0, 2, 'API_Automation.Rest_Assured.StatusChange_Test')
+data.setCell(0, 3, 8066);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'validateVarianceId')
+data.setCell(1, 2, 'API_Automation.Rest_Assured.StatusChange_Test')
+data.setCell(1, 3, 5122);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'validateStatusResponseTime')
+data.setCell(2, 2, 'API_Automation.Rest_Assured.StatusChange_Test')
+data.setCell(2, 3, 3);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 ms</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -219,14 +273,22 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">API_Automation.Rest_Assured.AppTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">API_Automation.Rest_Assured.StatusChange_Test</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">getTOken</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">test</span>
-                <span class="method-start">3054 ms</span>
+                <span class="method-name">validateChangeStatus</span>
+                <span class="method-start">3306 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validateVarianceId</span>
+                <span class="method-start">11374 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">validateStatusResponseTime</span>
+                <span class="method-start">16500 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
