--- a/test-output/old/Default suite/groups.html
+++ b/test-output/old/Default suite/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Change Status</td><td>StatusChange_Test.validateVarianceId()[pri:1, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]<br/>StatusChange_Test.validateChangeStatus()[pri:0, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]<br/>StatusChange_Test.validateStatusResponseTime()[pri:2, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]<br/></td></tr>
+</table>
