--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,26 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>API_Automation.Rest_Assured.AppTest</td>
+<td>API_Automation.Rest_Assured.StatusChange_Test</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test</td>
-<td>&nbsp;</td></tr>
+<td>validateVarianceId</td>
+<td>Change Status </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateChangeStatus</td>
+<td>Change Status </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>validateStatusResponseTime</td>
+<td>Change Status </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
