--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e2cbe0">  <td>20/06/24 18:48:47</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.getTOken()[pri:0, instance:API_Automation.Rest_Assured.AppTest@2df3b89c]">&gt;&gt;getTOken</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1977310713</td>   <td></td> </tr>
-<tr bgcolor="ee68d8">  <td>20/06/24 18:48:50</td>   <td>3051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AppTest.test()[pri:0, instance:API_Automation.Rest_Assured.AppTest@2df3b89c]">test</td> 
-  <td>main@1977310713</td>   <td></td> </tr>
+<tr bgcolor="c285f4">  <td>20/06/25 14:12:41</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;BaseTest.getTOken()[pri:0, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]">&gt;&gt;getTOken</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/06/25 14:12:44</td>   <td>3304</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StatusChange_Test.validateChangeStatus()[pri:0, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]">validateChangeStatus</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/06/25 14:12:57</td>   <td>16498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StatusChange_Test.validateStatusResponseTime()[pri:2, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]">validateStatusResponseTime</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>20/06/25 14:12:52</td>   <td>11372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StatusChange_Test.validateVarianceId()[pri:1, instance:API_Automation.Rest_Assured.StatusChange_Test@305b7c14]">validateVarianceId</td> 
+  <td>main@1146825051</td>   <td></td> </tr>
 </table>
